--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "eslint": "eslint --fix src --ext .ts --max-warnings=0",
     "dev:comment": "启动开发环境",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/index.ts",
-    "dev-test": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/test/index.ts"
+    "dev-test": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/test/index.ts",
+    "ts-node": "ts-node -r tsconfig-paths/register --transpile-only"
   },
   "dependencies": {
     "@babel/core": "^7.21.0",
