--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,4 +27,8 @@
     "node_modules",
     "/**/*.d.ts",
   ],
+  "ts-node": {
+    "transpileOnly": true,
+    "require": ["tsconfig-paths/register"]
+  }
 }
