--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev:comment": "启动开发环境",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/index.ts",
     "dev-test": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/test/index.ts",
-    "ts-node": "ts-node -r tsconfig-paths/register --transpile-only"
+    "ts-node": "ts-node -r tsconfig-paths/register --transpile-only",
+    "run": "ts-node -r tsconfig-paths/register --transpile-only src/index.ts"
   },
   "dependencies": {
     "@babel/core": "^7.21.0",
