--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/index.ts",
     "dev-test": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/test/index.ts",
     "ts-node": "ts-node -r tsconfig-paths/register --transpile-only",
-    "run": "ts-node -r tsconfig-paths/register --transpile-only src/index.ts"
+    "run": "ts-node -r tsconfig-paths/register --transpile-only src/index.ts",
+    "build": "npx rollup -c --bundleConfigAsCjs"
   },
   "dependencies": {
     "@babel/core": "^7.21.0",
@@ -19,12 +20,16 @@
     "commander": "^10.0.0",
     "crypto-js": "^4.1.1",
     "css-tree": "^2.3.1",
+    "observable-fns": "^0.6.1",
     "prettier": "^2.8.4",
     "shelljs": "^0.8.5",
     "threads": "^1.7.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/babel__core": "^7.20.0",
     "@types/babel__traverse": "^7.18.3",
     "@types/crypto-js": "^4.1.1",
@@ -35,6 +40,10 @@
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "eslint": "8.22.0",
+    "rollup": "^3.19.1",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "rollup-plugin-uglify": "^6.0.4",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^3.14.2",
     "typescript": "^4.9.5"
