--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "inlineSourceMap":true,
+    "inlineSourceMap": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "stripInternal": true,
@@ -18,14 +18,10 @@
       "@/*": ["./*"],
       "@utils/*": ["utils/*"],
       "@core/*": ["core/*"],
-      "@enum/*": ["enum/*"],
+      "@enum/*": ["enum/*"]
     }
   },
-  "exclude": [
-    "lib",
-    "node_modules",
-    "/**/*.d.ts",
-  ],
+  "exclude": ["lib", "node_modules", "/**/*.d.ts"],
   "ts-node": {
     "transpileOnly": true,
     "require": ["tsconfig-paths/register"]
