--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "eslint": "8.22.0",
     "rollup": "^3.19.1",
     "rollup-plugin-license": "^3.0.1",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
-    "rollup-plugin-uglify": "^6.0.4",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.5"
