:bug: fix(build) Troubleshoot build failures

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "pretty": true,
     "declaration": true,
     "outDir": "dist",
+    "resolveJsonModule": true,
     "baseUrl": "./src",
     "paths": {
       "@/*": ["./*"],
