--- a/.github/ISSUE_TEMPLATE/1.bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug-report.yml
@@ -12,7 +12,7 @@ body:
         **📝请填写以下字段，便于更好的排查和解决问题，共同维护靠大家**
   - type: input
     attributes:
-      label: "`unveilr`版本信息"
+      label: 1.`unveilr`版本
       description: 填写 `unveilr -v` 的输出
     validations:
       required: true
