--- a/.github/ISSUE_TEMPLATE/1.bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug-report.yml
@@ -12,14 +12,14 @@ body:
         **📝请填写以下字段，便于更好的排查和解决问题，共同维护靠大家**
   - type: input
     attributes:
-      label: 1.`unveilr`版本
+      label: unveilr版本
       description: 填写 `unveilr -v` 的输出
     validations:
       required: true
   - type: input
     attributes:
-      label: "`NodeJs`版本信息(使用二进制文件的可以不填)"
-      description: 填写 `node -v` 的输出
+      label: NodeJs版本
+      description: 填写 `node -v` 的输出 _(使用二进制文件的可以不填)_
   - type: input
     attributes:
       label: 运行平台
