--- a/.github/ISSUE_TEMPLATE/1.bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug-report.yml
@@ -20,12 +20,14 @@ body:
     attributes:
       label: NodeJs版本
       description: 填写 `node -v` 的输出 _(使用二进制文件的可以不填)_
-  - type: input
+  - type: dropdown
+    id: sys-version
     attributes:
-      label: 运行平台
-      description: |
-        UNIX: output of `uname -a`
-        Windows: output of `"$([Environment]::OSVersion.VersionString) $(('x86', 'x64')[[Environment]::Is64BitOperatingSystem])"` in PowerShell console
+      label: 操作系统
+      options:
+        - Windows
+        - Linux
+        - MacOs
     validations:
       required: true
   - type: input
