--- a/.github/ISSUE_TEMPLATE/1.bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/1.bug-report.yml
@@ -24,6 +24,7 @@ body:
     id: sys-version
     attributes:
       label: 操作系统
+      description: 运行时的操作系统
       options:
         - Windows
         - Linux
