--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "ts-node": "ts-node -r tsconfig-paths/register --transpile-only",
     "build": "npx rollup -c --bundleConfigAsCjs",
     "pkg": "node scripts/pkg.js",
-    "release": "node scripts/publish.js"
+    "release": "node scripts/release.js"
   },
   "dependencies": {
     "@babel/core": "^7.21.3",
