--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.21.3",
-    "colors": "^1.4.0",
+    "chalk": "4.1.2",
     "commander": "^10.0.0",
     "crypto-js": "^4.1.1",
     "css-tree": "^2.3.1",
