test transfer browser

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,7 +1,8 @@
-lib
 node_modules
 dist
 bin
 scripts
 rollup.config.js
 
+src/core/parser/wxapkg/wxml-parser/parseWxml.ts
+src/core/parser/wxapkg/wxml-parser/parseZArray.ts
