--- a/package.json
+++ b/package.json
@@ -39,13 +39,17 @@
     "commander": "^10.0.0",
     "crypto-js": "^4.1.1",
     "css-tree": "^2.3.1",
+    "escodegen": "^2.0.0",
+    "esprima": "^4.0.1",
     "observable-fns": "^0.6.1",
     "prettier": "^2.8.5",
-    "shelljs": "^0.8.5",
     "threads": "^1.7.0",
+    "vm2": "^3.9.14",
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^5.0.0",
+    "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -53,21 +57,30 @@
     "@types/babel__traverse": "^7.18.3",
     "@types/crypto-js": "^4.1.1",
     "@types/css-tree": "^2.3.1",
+    "@types/escodegen": "^0.0.7",
+    "@types/esprima": "^4.0.3",
     "@types/node": "^18.14.4",
     "@types/prettier": "^2.7.2",
     "@types/shelljs": "^0.8.11",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.54.0",
+    "babel-plugin-static-fs": "^3.0.0",
     "compressing": "^1.8.0",
     "eslint": "8.22.0",
+    "javascript-obfuscator": "^4.0.2",
+    "path-browserify": "^1.0.1",
     "pkg": "^5.8.1",
     "rollup": "^3.19.1",
     "rollup-plugin-clear": "^2.0.7",
+    "rollup-plugin-conditional": "^3.1.2",
     "rollup-plugin-license": "^3.0.1",
+    "rollup-plugin-obfuscator": "^1.0.3",
+    "rollup-plugin-polyfill-node": "^0.12.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.34.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.2",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "vm-browserify": "^1.1.2"
   }
 }
