--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2018",
     "module": "commonjs",
     "moduleResolution": "node",
     "experimentalDecorators": true,
