--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -57,6 +58,7 @@
     "@types/prettier": "^2.7.2",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
+    "babel-plugin-static-fs": "^3.0.0",
     "compressing": "^1.8.0",
     "eslint": "8.22.0",
     "javascript-obfuscator": "^4.0.2",
